UV Editor Constrain-To-Bounds problem on unusual input file #102923

Closed
opened 2022-12-03 01:44:18 +01:00 by Inamura JIN · 12 comments

System Information
Operating system:Win11
Version 21H12
Graphics card: NVIDIA GeForce RTX3070

Blender Version
Broken: 3.3 to 3.3.1
Worked: to 3.0

Short description of error
UV Editor is not working properly

Exact steps for others to reproduce the error
https://youtu.be/hCkmkGJgAzk UVBug.blend
Enable UV Editor > Header menu UV > Constrain to Image Bounds
Change the pivot point to 2D Cursor
Align the UV to the lower left corner
Scale cannot be changed
It will be 0,0,1
This does not always happen

**System Information** Operating system:Win11 Version 21H12 Graphics card: NVIDIA GeForce RTX3070 **Blender Version** Broken: 3.3 to 3.3.1 Worked: to 3.0 **Short description of error** UV Editor is not working properly **Exact steps for others to reproduce the error** https://youtu.be/hCkmkGJgAzk [UVBug.blend](https://archive.blender.org/developer/F13987351/UVBug.blend) Enable UV Editor > Header menu UV > Constrain to Image Bounds Change the pivot point to 2D Cursor Align the UV to the lower left corner Scale cannot be changed It will be 0,0,1 This does not always happen
Author

Added subscriber: @BuuGraphic

Added subscriber: @BuuGraphic

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

I couldn't achieve this in a clean project. But it works in the example file. Suspicion that there are close to 0, but negative values. And because of this, the link does not work.

I couldn't achieve this in a clean project. But it works in the example file. Suspicion that there are close to 0, but negative values. And because of this, the link does not work.
Author

Why is that?
Please watch the video
https://youtu.be/hCkmkGJgAzk?t=25
The first half works fine (3.0)
The second half does not work (3.3)

The Blender used here is
I have enabled File > Default > Load factory settings
In other words, no add-ons and settings have been changed

Why is that? Please watch the video https://youtu.be/hCkmkGJgAzk?t=25 The first half works fine (3.0) The second half does not work (3.3) The Blender used here is I have enabled File > Default > Load factory settings In other words, no add-ons and settings have been changed

I say I endorse your report. But if you click on the fields where 0 is written, then most likely there will be something -435235e16, that is, a very small number. And often negative.

I say I endorse your report. But if you click on the fields where 0 is written, then most likely there will be something -435235e16, that is, a very small number. And often negative.
Author

I see thank you!
Sorry... I misunderstood what you meant by "link does not work

https://youtu.be/of-E4yH8SyM

More report
There seems to be a bug in the UV editor that causes the scale to go to 0 and the aspect ratio to be fixed even when it is not
However, this is not an inconvenient bug and maybe this feature should be kept
Could you create a "Keep Aspect Ratio" checkbox in the Operator Panel so that the previous behavior is also possible?

I see thank you! Sorry... I misunderstood what you meant by "link does not work https://youtu.be/of-E4yH8SyM More report There seems to be a bug in the UV editor that causes the scale to go to 0 and the aspect ratio to be fixed even when it is not However, this is not an inconvenient bug and maybe this feature should be kept Could you create a "Keep Aspect Ratio" checkbox in the Operator Panel so that the previous behavior is also possible?

Added subscriber: @Chris_Blackbourn

Added subscriber: @Chris_Blackbourn

Confirmed the bug with the file supplied, at least one of the U co-ordinates is a tiny negative number.

Interestingly, if you export the mesh as an .OBJ, then import it straight back in, the newly imported mesh works as expected.

... more investigation required ...

Confirmed the bug with the file supplied, at least one of the U co-ordinates is a tiny negative number. Interestingly, if you export the mesh as an .OBJ, then import it straight back in, the newly imported mesh works as expected. ... more investigation required ...
Chris Blackbourn changed title from UV Editor is not working properly to UV Editor Constrain-To-Bounds problem on unusual input file 2022-12-06 01:24:59 +01:00
Chris Blackbourn self-assigned this 2022-12-06 05:33:30 +01:00

...WIP...

...WIP...

This issue was referenced by 0079460dc7

This issue was referenced by 0079460dc79a6c4798ec41e86550d8f0882ed313

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102923
No description provided.